project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/abcrypt-cli-v0.4.0\...HEAD[Unreleased]

=== Changed

* Bump MSRV to 1.85.0 ({pull-request-url}/677[#677])
* Restore demo animation ({pull-request-url}/702[#702])
* Change the license for documents and assets to CC BY 4.0
  ({pull-request-url}/718[#718])

== {compare-url}/abcrypt-cli-v0.3.3\...abcrypt-cli-v0.4.0[0.4.0] - 2025-01-09

=== Added

* Supports the abcrypt version 1 file format ({pull-request-url}/619[#619])
* Add `argon2` command to get the Argon2 context ({pull-request-url}/619[#619])

=== Changed

* Description of options which depends on the features are always available
  ({pull-request-url}/648[#648])

=== Removed

* Remove the abcrypt version 0 file format support
  ({pull-request-url}/619[#619])

== {compare-url}/abcrypt-cli-v0.3.2\...abcrypt-cli-v0.3.3[0.3.3] - 2024-08-04

=== Changed

* Change `--passphrase-from-env` to take an UTF-8 string as an environment
  variable key ({pull-request-url}/531[#531])

== {compare-url}/abcrypt-cli-v0.3.1\...abcrypt-cli-v0.3.2[0.3.2] - 2024-04-17

=== Changed

* Change to remove unnecessary files from the book
  ({pull-request-url}/382[#382])

== {compare-url}/abcrypt-cli-v0.3.0\...abcrypt-cli-v0.3.1[0.3.1] - 2024-04-16

=== Added

* Add man page for the format specification ({pull-request-url}/369[#369])

=== Changed

* Update examples in man pages

== {compare-url}/abcrypt-cli-v0.2.12\...abcrypt-cli-v0.3.0[0.3.0] - 2024-02-18

=== Changed

* Bump MSRV to 1.74.0 ({pull-request-url}/272[#272])
* Rename Argon2 parameters ({pull-request-url}/275[#275])
* Rename `--memory-size` to `--memory-cost` ({pull-request-url}/275[#275])
* Rename `--iterations` to `--time-cost` ({pull-request-url}/275[#275])

== {compare-url}/abcrypt-cli-v0.2.11\...abcrypt-cli-v0.2.12[0.2.12] - 2024-01-21

=== Changed

* Add description about behavior of `-h`, `--help` and `--version` in man pages
  ({pull-request-url}/234[#234])
