@@ -1,0 +1,3 @@
+The completion is output to standard output.
+
+See `abcrypt-completion(1)` for more details.
