@@ -1,0 +1,3 @@
+SPDX-FileCopyrightText: 2025 Shun Sakai
+
+SPDX-License-Identifier: CC-BY-4.0
