@@ -7,73 +7,39 @@ mod utils;
 use predicates::prelude::predicate;
 
 #[test]
-fn generate_completion_conflicts_with_subcommands() {
-    utils::command::command()
-        .arg("--generate-completion")
-        .arg("bash")
-        .arg("encrypt")
-        .assert()
-        .failure()
-        .code(2)
-        .stderr(predicate::str::contains(
-            "the subcommand 'encrypt' cannot be used with '--generate-completion <SHELL>'",
-        ));
-    utils::command::command()
-        .arg("--generate-completion")
-        .arg("bash")
-        .arg("decrypt")
-        .assert()
-        .failure()
-        .code(2)
-        .stderr(predicate::str::contains(
-            "the subcommand 'decrypt' cannot be used with '--generate-completion <SHELL>'",
-        ));
-    utils::command::command()
-        .arg("--generate-completion")
-        .arg("bash")
-        .arg("information")
-        .assert()
-        .failure()
-        .code(2)
-        .stderr(predicate::str::contains(
-            "the subcommand 'information' cannot be used with '--generate-completion <SHELL>'",
-        ));
-}
-
-#[test]
 fn generate_completion() {
     utils::command::command()
-        .arg("--generate-completion")
+        .arg("completion")
         .arg("bash")
         .assert()
         .success()
         .stdout(predicate::ne(""));
     utils::command::command()
-        .arg("--generate-completion")
+        .arg("completion")
         .arg("elvish")
         .assert()
         .success()
         .stdout(predicate::ne(""));
     utils::command::command()
-        .arg("--generate-completion")
+        .arg("completion")
         .arg("fish")
         .assert()
         .success()
         .stdout(predicate::ne(""));
     utils::command::command()
-        .arg("--generate-completion")
+        .arg("completion")
         .arg("nushell")
         .assert()
         .success()
         .stdout(predicate::ne(""));
     utils::command::command()
-        .arg("--generate-completion")
+        .arg("completion")
         .arg("powershell")
         .assert()
         .success()
         .stdout(predicate::ne(""));
     utils::command::command()
-        .arg("--generate-completion")
+        .arg("completion")
         .arg("zsh")
         .assert()
         .success()
@@ -83,14 +49,12 @@ fn generate_completion() {
 #[test]
 fn generate_completion_with_invalid_shell() {
     utils::command::command()
-        .arg("--generate-completion")
+        .arg("completion")
         .arg("a")
         .assert()
         .failure()
         .code(2)
-        .stderr(predicate::str::contains(
-            "invalid value 'a' for '--generate-completion <SHELL>'",
-        ));
+        .stderr(predicate::str::contains("invalid value 'a' for '<SHELL>'"));
 }
 
 #[test]
@@ -112,5 +76,29 @@ fn after_long_help() {
         .success()
         .stdout(predicate::str::contains(include_str!(
             "assets/after-long-help.md"
+        )));
+}
+
+#[test]
+fn long_version_for_completion_command() {
+    utils::command::command()
+        .arg("completion")
+        .arg("--version")
+        .assert()
+        .success()
+        .stdout(predicate::str::contains(include_str!(
+            "assets/long-version.md"
+        )));
+}
+
+#[test]
+fn after_long_help_for_completion_command() {
+    utils::command::command()
+        .arg("completion")
+        .arg("--help")
+        .assert()
+        .success()
+        .stdout(predicate::str::contains(include_str!(
+            "assets/completion-after-long-help.md"
         )));
 }
