@@ -1,0 +1,1 @@
+../../../../../../man/man1/abcrypt-completion.1.adoc
