@@ -1,8 +1,8 @@
-// SPDX-FileCopyrightText: 2023 Shun Sakai
+// SPDX-FileCopyrightText: 2025 Shun Sakai
 //
 // SPDX-License-Identifier: CC-BY-4.0
 
-= abcrypt-help(1)
+= abcrypt-completion(1)
 // Specify in UTC.
 :docdate: 2025-05-11
 :revnumber: 0.4.0
@@ -13,25 +13,48 @@ ifndef::site-gen-antora[:includedir: ./include]
 
 == NAME
 
-abcrypt-help - print the help for a command
+abcrypt-completion - generate shell completion
 
 == SYNOPSIS
 
-*abcrypt help* [_COMMAND_]
+*abcrypt completion* _SHELL_
 
 == DESCRIPTION
 
-This command prints the help for a command.
-
-This command is identical to any of the following:{blank}::
-
-  $ *abcrypt* [_COMMAND_] *-h*|*--help*
+This command generates shell completion. The completion is output to standard
+output.
 
 == POSITIONAL ARGUMENTS
 
-_COMMAND_::
+_SHELL_::
 
-  Subcommand to print the help.
+  Shell to generate completion for.
+
+  The possible values are:{blank}:::
+
+    *bash*::::
+
+      Bash.
+
+    *elvish*::::
+
+      Elvish.
+
+    *fish*::::
+
+      fish.
+
+    *nushell*::::
+
+      Nushell.
+
+    *powershell*::::
+
+      PowerShell.
+
+    *zsh*::::
+
+      Zsh.
 
 ifndef::site-gen-antora[include::{includedir}/section-exit-status.adoc[]]
 ifdef::site-gen-antora[include::partial$man/man1/include/section-exit-status.adoc[]]
@@ -47,5 +70,5 @@ ifdef::site-gen-antora[include::partial$man/man1/include/section-copyright.adoc[
 
 == SEE ALSO
 
-*abcrypt*(1), *abcrypt-argon2*(1), *abcrypt-completion*(1),
-*abcrypt-decrypt*(1), *abcrypt-encrypt*(1), *abcrypt-information*(1)
+*abcrypt*(1), *abcrypt-argon2*(1), *abcrypt-decrypt*(1), *abcrypt-encrypt*(1),
+*abcrypt-help*(1), *abcrypt-information*(1)
