@@ -4,7 +4,7 @@
 
 = abcrypt-encrypt(1)
 // Specify in UTC.
-:docdate: 2025-03-10
+:docdate: 2025-05-11
 :revnumber: 0.4.0
 :doctype: manpage
 :mansource: abcrypt {revnumber}
@@ -166,5 +166,5 @@ ifdef::site-gen-antora[include::partial$man/man1/include/section-copyright.adoc[
 
 == SEE ALSO
 
-*abcrypt*(1), *abcrypt-argon2*(1), *abcrypt-decrypt*(1), *abcrypt-help*(1),
-*abcrypt-information*(1)
+*abcrypt*(1), *abcrypt-argon2*(1), *abcrypt-completion*(1),
+*abcrypt-decrypt*(1), *abcrypt-help*(1), *abcrypt-information*(1)
